# fastapi-template

./: .env-example  .gitignore  Dockerfile  Dockerfile-simple  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml  gunicorn_conf.py  pyproject.toml  requirements.txt  start-reload.sh  start.sh
app/: main.py
app/configs/: log_config.yaml  settings.env  settings.py
app/dto/: hello_req.py  hello_resp.py  test_req.py
app/exceptions/: error_code.py  exception_handlers.py  service_exception.py
app/middlewares/: request_middleware.py
app/routers/: v1_router.py
app/services/: hello_service.py
app/utils/: logger.py  utils.py
